# pyxelart-detector

./: README.md  __init__.py  __main__.py  pyproject.toml
src/: test.py
